force-app/main/default/objects/CONTAINER__c/CONTAINER__c.object-meta.xml
<CustomObject>
    <label>CNTR In W/D/Y</label>
    <nameField>
        <displayFormat>CTNR-{000000}</displayFormat>
        <label>CONTAINER ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CNTR In W/D/Y</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>