force-app/main/default/objects/CONTAINER__c/fields/ContainerNO__c.field-meta.xml
<CustomField>
    <fullName>ContainerNO__c</fullName>
    <label>CONTAINER NO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>