force-app/main/default/objects/CONTAINER__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ContainerNO__c</columns>
    <columns>SealNo__c</columns>
    <columns>ContainerType__c</columns>
    <columns>CargoTypeUnit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>